fix: instant film pile shadow clipped

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,7 +5,7 @@
 html,
 body,
 #__nuxt {
-    @apply h-full;
+    @apply h-full overflow-x-hidden;
     font-family: -apple-system, Helvetica Neue, Helvetica, Arial, PingFang SC, Hiragino Sans GB, WenQuanYi Micro Hei, Microsoft Yahei, sans-serif;
 }
 
